--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,9 @@
                                                             <h2>Audio Snackpack</h2>
                                                             <hr>
                                                             <p>
-                                                                Web software which allows the user to upload an audio clip, trip it, add text, choose an aesthetic theme, and produce a video graphic of their soundclip for sharing podcast previews on social media.
+                                                                Web software which allows the user to upload and trim an audio clip, choose a theme, and add text in order to produce a visual soundwave to share on social.
+                                                                <br>
+                                                                Node.JS, Heroku, Canvas.JS, Javascript 
                                                                 <br>
                                                                 See More
                                                             </p>
