--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
 	<meta charset="UTF-8">
-	<title>Joe Wright | Developer</title>
+	<title>Joe Wright | Engineer</title>
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta property="og:title" content="Joe Wright Web Developer"/>
@@ -38,8 +38,8 @@
                     <div class="crt-card-avatar">
                         <img class="avatar avatar-195" src="images/avatar/headshot.jpg" width="195" height="195" alt="">
                     </div>
-                    <h1>Joe Wright</h1>
-                    <h2>Full Stack Developer</h2>
+                    <h1>Joe Wright, EI</h1>
+                    <h2>Full Stack Engineer</h2>
                     <a href="images/JoeWrightResume.pdf" class="btn btn-download" download>Download Resume</a>
 
                     <ul class="social-icons">
@@ -65,7 +65,7 @@
                 <section class="content about">
                     <div class="block-content">
                         <h3 class="title">About Me</h3>
-                        <h3 class="subtitle">I'm a <b>Full Stack Developer,</b> specializing in the design of <b>Engaging And Responsive UI</b> & <b>High Performance Modern Web Applications.</b></h3>
+                        <h3 class="subtitle">I'm a <b>Full Stack Engineer,</b> specializing in the design of <b>Engaging And Responsive UI</b> & <b>High Performance Modern Web Applications.</b></h3>
                         <p>I work with individuals, curation teams, and established brands to design and build memorable web experiences.  I start by taking the time to understand your unique vision.  Each project I deploy to the web is marked by unique design, high-ranking SEO performativity, mobile first responsive design, and keen attention to performance and speed.  Don't know what your vision is yet?  <a href="contact.html" style="color:black;font-weight:600;">Let's talk</a>--I can help with that too.</p>
                         <div class="info-list row">
                             <p class="col-sm-6"><strong>Name: </strong> Joe Wright</p>
