--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
                                     </div>
                                     <div class="portfolio-container row isotope" id="portfolio-container">
                                         <!-- WORK 1 START -->
-                                        <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item professional uxui nodeJS fullstack">
+                                        <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item professional uxui reactJS nodeJS fullstack">
                                             <a class="open-project" target="_blank" href="https://audiosnackpack.herokuapp.com/">
                                                 <div class="portfolio-column">
                                                     <div class="portfolio-hover">
@@ -72,7 +72,7 @@
                                                             <p>
                                                                 Web software which allows the user to upload and trim an audio clip, choose a theme, and add text in order to produce a visual soundwave to share on social.
                                                                 <br>
-                                                                Node.JS, Heroku, Canvas.JS, Javascript 
+                                                                Node.JS, React.JS, Canvas.JS, Javascript 
                                                                 <br>
                                                                 See More
                                                             </p>
@@ -128,7 +128,7 @@
                                            </div>
                                            <!-- WORK 1 END -->
                                             <!-- WORK 1 START -->
-                                            <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item professional uxui cms nodeJS backend fullstack">
+                                            <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item professional uxui cms nodeJS reactJS backend fullstack">
                                                 <a class="open-project" target="_blank" href="https://github.com/JoeWrightNC/mentionbot">
                                                     <div class="portfolio-column">
                                                         <div class="portfolio-hover">
@@ -138,7 +138,7 @@
                                                                 <p>
                                                                     Custom Software Solution converting google alerts to a slack approval queue, which then discards data or sends it to a heroku database with a front end for metric analysis.
                                                                     <br> 
-                                                                    Javascript, Node.JS, Express, Handlebars, MySQL, Slack API, MVC Development, UX/UI, Design, HTML, CSS, Bootstrap 4.3 
+                                                                    Javascript, React.JS, Node.JS, Express, MySQL, Slack API, MVC Development, UX/UI, Design, HTML, CSS, Bootstrap 4.3 
                                                                     <br>
                                                                     See Code on Github
                                                                 </p>
