--- a/portfolio.html
+++ b/portfolio.html
@@ -83,27 +83,6 @@
                                                 </div>
                                             </a>
                                         </div>
-                                           <!-- WORK 1 START -->
-                                           <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item professional uxui cms php fullstack">
-                                            <a class="open-project" target="_blank" href="https://statesnewsroom.com">
-                                                <div class="portfolio-column">
-                                                    <div class="portfolio-hover">
-                                                        <div class="portfolio-content">
-                                                            <h2>Internal Staff Portal</h2>
-                                                            <hr>
-                                                            <p>
-                                                                Internal systems solution for rapidly growing startup.  Introduced and standardized onboarding procedures, staff training, inner company request and communication systems, and more.  Complex multisite operating out of a single optimized database.
-                                                                <br>
-                                                                Private, Link not available.
-                                                            </p>
-                                                        </div>
-                                                        <div class="portfolio-overlay"></div>
-                                                    </div>
-                                                    <img src="images/portfolio/portal.png" alt="">
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <!-- WORK 1 END -->
                                             <!-- WORK 1 START -->
                                             <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item professional uxui cms php fullstack">
                                                <a class="open-project" target="_blank" href="https://www.goodnesscooks.com/">
@@ -173,6 +152,119 @@
                                             </a>
                                         </div>
                                         <!-- WORK 1 END -->
+                                        <!-- WORK 1 START -->
+                                        <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item professional nodeJS fullstack backend">
+                                            <a class="open-project" target="_blank" href="https://github.com/JoeWrightNC/TheLunchHippo">
+                                                <div class="portfolio-column">
+                                                    <div class="portfolio-hover">
+                                                        <div class="portfolio-content">
+                                                            <h2>The Lunch Hippo</h2>
+                                                            <hr>
+                                                            <p>
+                                                                Conversational slackbot whch automated semiweekly lunch orders for a previous employer. Medium Article outlining process coming soon.
+                                                                <br> 
+                                                                G Suite, Google APIs, Node.JS, NPM, Heroku, Slack
+                                                                <br>
+                                                                See More on Github
+                                                            </p>
+                                                        </div>
+                                                        <div class="portfolio-overlay"></div>
+                                                    </div>
+                                                    <img src="images/portfolio/lunchHippo.png" alt="">
+                                                </div>
+                                            </a>
+                                        </div>
+                                        <!-- WORK 1 END --> 
+                                        <!-- WORK 1 START -->
+                                        <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item professional uxui cms php fullstack">
+                                            <a class="open-project" target="_blank" href="https://www.penncapital-star.com/">
+                                                <div class="portfolio-column">
+                                                    <div class="portfolio-hover">
+                                                        <div class="portfolio-content">
+                                                            <h2>Pennsylvania Capital-Star</h2>
+                                                            <hr>
+                                                            <p>
+                                                                Statewide Digital Newspaper with an emphasis on watchdog journalism.
+                                                                <br> 
+                                                                UX/UI, HTML, CSS, Javascript, Apache, Wordpress, PHP, SCSS, System Administration, CLoudflare Enterprise, Cybersecurity, TagDiv Module, SEO, GSC 
+                                                                <br>
+                                                                See More
+                                                            </p>
+                                                        </div>
+                                                        <div class="portfolio-overlay"></div>
+                                                    </div>
+                                                    <img src="images/portfolio/Pennsylvania.png" alt="">
+                                                </div>
+                                            </a>
+                                        </div>
+                                        <!-- WORK 1 END -->
+                                        <!-- WORK 1 START -->
+                                        <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item professional uxui cms php fullstack">
+                                            <a class="open-project" target="_blank" href="https://statesnewsroom.com">
+                                                <div class="portfolio-column">
+                                                    <div class="portfolio-hover">
+                                                        <div class="portfolio-content">
+                                                            <h2>Internal Staff Portal</h2>
+                                                            <hr>
+                                                            <p>
+                                                                Internal systems solution for rapidly growing startup.  Introduced and standardized onboarding procedures, staff training, inner company request and communication systems, and more.  Complex multisite operating out of a single optimized database.
+                                                                <br>
+                                                                Private, Link not available.
+                                                            </p>
+                                                        </div>
+                                                        <div class="portfolio-overlay"></div>
+                                                    </div>
+                                                    <img src="images/portfolio/portal.png" alt="">
+                                                </div>
+                                            </a>
+                                        </div>
+                                        <!-- WORK 1 END -->
+                                        <!-- WORK 1 START -->
+                                        <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item professional uxui cms php">
+                                            <a class="open-project" target="_blank" href="https://deeperdancedyes.com">
+                                                <div class="portfolio-column">
+                                                    <div class="portfolio-hover">
+                                                        <div class="portfolio-content">
+                                                            <h2>Deeper Dance Dyes</h2>
+                                                            <hr>
+                                                            <p>
+                                                                Ecommerce website selling a variety of handmade products. 
+                                                                <br> 
+                                                                UX/UI, Design, HTML, CSS, Javascript, Apache, Wordpress, PHP, WooCommerce, WooCommerce Customization, Digital Marketing, System Administration
+                                                                <br>
+                                                                See More
+                                                            </p>
+                                                        </div>
+                                                        <div class="portfolio-overlay"></div>
+                                                    </div>
+                                                    <img src="images/portfolio/portal.png" alt="">
+                                                </div>
+                                            </a>
+                                        </div>
+                                        <!-- WORK 1 END -->
+                                        <!-- WORK 1 START -->
+                                        <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item professional uxui cms php">
+                                            <a class="open-project" target="_blank" href="https://deeperdancedyes.com">
+                                                <div class="portfolio-column">
+                                                    <div class="portfolio-hover">
+                                                        <div class="portfolio-content">
+                                                            <h2>OMS Fitness</h2>
+                                                            <hr>
+                                                            <p>
+                                                                Marketing website advertising unique home training opportunities. 
+                                                                <br> 
+                                                                UX/UI, Design, HTML, CSS, Javascript, Apache, Wordpress, PHP, WooCommerce, WooCommerce Customization, Digital Marketing, System Administration
+                                                                <br>
+                                                                See More
+                                                            </p>
+                                                        </div>
+                                                        <div class="portfolio-overlay"></div>
+                                                    </div>
+                                                    <img src="images/portfolio/portal.png" alt="">
+                                                </div>
+                                            </a>
+                                        </div>
+                                        <!-- WORK 1 END -->
                                          <!-- WORK 1 START -->
                                          <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item professional uxui cms php fullstack">
                                             <a class="open-project" target="_blank" href="https://www.ohiocapitaljournal.com/">
@@ -215,29 +307,6 @@
                                                         <div class="portfolio-overlay"></div>
                                                     </div>
                                                     <img src="images/portfolio/samanage.png" alt="">
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <!-- WORK 1 END -->
-                                        <!-- WORK 1 START -->
-                                        <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item professional nodeJS fullstack backend">
-                                            <a class="open-project" target="_blank" href="https://github.com/JoeWrightNC/TheLunchHippo">
-                                                <div class="portfolio-column">
-                                                    <div class="portfolio-hover">
-                                                        <div class="portfolio-content">
-                                                            <h2>The Lunch Hippo</h2>
-                                                            <hr>
-                                                            <p>
-                                                                Slackbot built as a passion project for a previous employer.  Automated semiweekly lunch orders using a conversational slack bot. Medium Article coming soon.
-                                                                <br> 
-                                                                G Suite, Google APIs, Node.JS, Heroku, Slack
-                                                                <br>
-                                                                See More on Github
-                                                            </p>
-                                                        </div>
-                                                        <div class="portfolio-overlay"></div>
-                                                    </div>
-                                                    <img src="images/portfolio/lunchHippo.png" alt="">
                                                 </div>
                                             </a>
                                         </div>
@@ -516,28 +585,6 @@
                                                         <div class="portfolio-overlay"></div>
                                                     </div>
                                                     <img src="images/portfolio/Nevada.png" alt="">
-                                                </div>
-                                            </a>
-                                        </div>
-                                        <!-- WORK 1 END --><!-- WORK 1 START -->
-                                        <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item professional uxui cms php fullstack">
-                                            <a class="open-project" target="_blank" href="https://www.penncapital-star.com/">
-                                                <div class="portfolio-column">
-                                                    <div class="portfolio-hover">
-                                                        <div class="portfolio-content">
-                                                            <h2>Pennsylvania Capital-Star</h2>
-                                                            <hr>
-                                                            <p>
-                                                                Statewide Digital Newspaper with an emphasis on watchdog journalism.
-                                                                <br> 
-                                                                UX/UI, HTML, CSS, Javascript, Apache, Wordpress, PHP, SCSS, System Administration, CLoudflare Enterprise, Cybersecurity, TagDiv Module, SEO, GSC 
-                                                                <br>
-                                                                See More
-                                                            </p>
-                                                        </div>
-                                                        <div class="portfolio-overlay"></div>
-                                                    </div>
-                                                    <img src="images/portfolio/Pennsylvania.png" alt="">
                                                 </div>
                                             </a>
                                         </div>
