--- a/portfolio.html
+++ b/portfolio.html
@@ -237,7 +237,7 @@
                                                         </div>
                                                         <div class="portfolio-overlay"></div>
                                                     </div>
-                                                    <img src="images/portfolio/portal.png" alt="">
+                                                    <img src="images/portfolio/deeper.png" alt="">
                                                 </div>
                                             </a>
                                         </div>
@@ -260,7 +260,7 @@
                                                         </div>
                                                         <div class="portfolio-overlay"></div>
                                                     </div>
-                                                    <img src="images/portfolio/portal.png" alt="">
+                                                    <img src="images/portfolio/oms.png" alt="">
                                                 </div>
                                             </a>
                                         </div>
