--- a/resume.html
+++ b/resume.html
@@ -171,9 +171,9 @@
                                             </div>
                                             <ul>
                                                 <li>Responsible for developing and administrating a national network of news sites receiving approximately one million pageviews/week</li>
+                                                <li>Responsible for intake of feature requests from stakeholders across company and strategic sprint planning to meet business needs</li>
+                                                <li>Development of Custom Software Solutions using Node, React and several other modern technologies to solve growing organizational needs of a rapidly expanding startup</li>
                                                 <li>System Administrator, Responsible for maintaining enterprise cybersecurity solution and 24/7 network integrity.</li>
-                                                <li>Development of Custom Software Solutions using Node, React, Handlebars, and several other technologies to solve growing organizational needs of a rapidly expanding startup.</li>
-                                                <li>SEO Optimization and Management, Weekly Metrics Analysis</li>
                                                 <li>Wordpress, PHP, Apache, Nginx, MySQL, jQuery, JS, CSS, Semantic HTML 5, Node.JS, React.JS, Handlebars, G-Suite, SEO, Cybersecurity, Web Host Manager, Linux</li>
                                             </ul>
                                         </div>
