--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,7 @@
                                                             <p>
                                                                 Web software which allows the user to upload and trim an audio clip, choose a theme, and add text in order to produce a visual soundwave to share on social.
                                                                 <br>
-                                                                Node.JS, React.JS, Canvas.JS, Javascript 
+                                                                Node.JS, React.JS, Canvas.JS, Javascript, Redis 
                                                                 <br>
                                                                 See More
                                                             </p>
